nailgun/static/styles/main.less
/* ... */
.custom-tumbler input:indeterminate + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat -44px 0px;
}

.custom-tumbler input[disabled] + span {
  opacity: 0.4;
  cursor: not-allowed;
}

.custom-tumbler input[type=radio] {
  margin-top: 0;
}

.custom-tumbler input[type=radio] + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat 0px -22px;
}

.custom-tumbler input[type=radio]:checked + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat -22px -22px;
}

// CUSTOM RANGE INPUT

input[type=range] {
  &,
  &:focus,
  &:active,
  &::-moz-focus-inner,
  &:-moz-focusring {
    border: 0 !important;
    outline: none !important;
  }
  &::-ms-track {
    border: inherit;
    color: transparent;
    background: transparent;
    outline: none;
  }
  &::-ms-fill-lower,
  &::-ms-fill-upper {
    background: transparent;
    outline: none;
  }
  &::-ms-tooltip {
    display: none;
  }
  &:disabled {
    opacity: 0.4;
  }
  -webkit-appearance: none;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  width: 100%;
  height: 6px;
  margin: 0;
  border: none;
  border-radius: 3px;
  background: @range-color;
  box-shadow: inset 0 1px 0 0 @range-color - 10%, inset 0 -1px 0 0 @range-color + 10%;
  outline: none;
}

// NAVIGATION

.navbar-bg {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 2;
  width: 100%;
  height: 70px;
  background-color: @white;
  box-shadow: 0 0 10px @shadow-color;
  min-width: @page-width;
}

.navigation-box {
  width: 100%;
}

.navbar {
  border-radius: 0px;
  border: 0px solid transparent;
  margin: 0px;
  min-height: 70px;
  position: relative;
  z-index: 3;
}

.navbar-default {
  background-color: transparent;
  border-color: transparent;
  @navbar-height: 34px;
  .navbar-nav {
    margin: 0;
    margin-top: 18px;
    height: @navbar-height;
    overflow: hidden;
    li {
      display: inline-block;
      width: auto;
      background-color: @white;
      a {
        font-family: 'bebas';
        font-size: @base-font-size + 7;
        color: @navbar-color;
        padding-top: 7px;
        padding-bottom: 0px;
        height: @navbar-height;
        margin-left: 4px;
        -webkit-font-smoothing: antialiased;
        &:hover {
          color: @white;
          background-color: @base-light-color;
          border-radius: 4px;
        }
        &:focus {
          color: @white;
          background-color: @base-light-color;
          border-radius: 4px;
        }
      }
    }
    .active {
      a {
        color: @white;
        background-color: @navbar-color-active;
        border-radius: 4px;
        &:hover {
          color: @white;
          background-color: @navbar-color-active;
          border-radius: 4px;
        }
        &:focus {
          color: @white;
          background-color: @navbar-color-active;
          border-radius: 4px;
        }
      }
    }
  }
}

.navbar-logo {
  float: left;
  height: 60px;
  line-height: 20px;
  padding: 0px;
  margin-top: 2px;
  width: 166px;
  background: url(../img/logos/fuel-logo.svg) no-repeat top left;
}
/* ... */

